Added navbar to site

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,14 @@
 <!doctype html>
-<title>Login</title>
+<html>
+<head>
+	<title>Layout</title>
+	<link rel="stylesheet" href="../static/styles.css">
+</head>
+<body>
+{% include 'navbar.html' %}
 <div class="page">
-	{% block body %}{% endblock %}
+	{% block body %}
+	{% endblock %}
 </div>
+</body>
+</html>
